# LOOP-Project

./: .gitignore  CMakeLists.txt  README.md  demo_loop.json  demo_loop.loop
docs/: file_format_v1.md
docs/adr/: ADR-001-tick-timing.md  ADR-002-003-mmap-and-bitpack.md
include/: ActiveVoice.h  FormatSpec.h  LoopCreatorView.h  LoopFileReader.h  LoopFileWriter.h  LoopPlayerEditor.h  LoopPlayerProcessor.h  LoopSequencer.h
src/: LoopCompiler.cpp  LoopCreatorView.cpp  LoopFileReader.cpp  LoopFileWriter.cpp  LoopPlayerEditor.cpp  LoopPlayerProcessor.cpp  LoopSequencer.cpp
tests/: test_format_roundtrip.cpp  test_sequencer_timing.cpp  test_zero_crossing.cpp
